--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "road-wave-fm-web",
   "version": "0.1.0",
   "description": "A web application to communicate with the Road Wave FM data source",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "author": {
     "name": "Harlan Sang",
     "email": "harlan@linkedmink.space"
@@ -50,7 +50,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint -c .eslintrc.js src/**/*.[tj]s{,x}",
-    "format": "prettier --write src/**/*.[tj]s{,x} *.js{,on}"
+    "format": "prettier --write src/**/*.[tj]s{,x} *.js{,on}",
+    "build:serve": "tsc --project ./tsconfig.serve.json",
+    "start:serve": "node ./dist/server.js"
   },
   "browserslist": {
     "production": [
