ci: adjust build parameters for initial deploy

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,23 +1,23 @@
 .vscode
 node_modules
 coverage
+public
 serve
 src
-tests
 .babelrc
 .dockerignore
 .env
 .eslintignore
 .eslintrc.js
 .gitignoore
-.prettierrc
+.prettierrc.js
 build.sh
 deployment.yaml
 Dockerfile
 jest.config.js
 README.md
 screenshot.png
-tsconfig.json
+tsconfig*.json
 webpack.*
 *.key
 *.key.pub
