--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
   },
   "private": true,
   "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/google.maps": "^3.45.4",
+    "@types/express": "^4.17.13",
+    "@types/google.maps": "^3.45.6",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.2",
-    "@types/node": "^12.0.0",
+    "@types/node": "^14.17.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
