--- a/tsconfig.serve.json
+++ b/tsconfig.serve.json
@@ -1,14 +1,21 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "display": "Node 14",
+
   "compilerOptions": {
-    "outDir": "./dist/",
-    "sourceMap": true,
-    "strict": true,
+    "lib": ["es2020"],
     "module": "commonjs",
-    "target": "es5",
-    "moduleResolution": "node",
+    "target": "es2020",
+
+    "strict": true,
     "esModuleInterop": true,
-    "lib": ["ES6"]
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+
+    "outDir": "./dist/"
   },
-  "include": ["serve"],
-  "exclude": ["node_modules", "src", "tests"]
+
+  "files": [
+    "serve/server.ts"
+  ]
 }
