--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,3 +1,21 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: road-wave-fm-web
+data:
+  config.json: |
+  {
+    "urls": {
+      "user": "http://localhost:8081",
+      "roadWave": "http://localhost:8080"
+    },
+    "googleMapsApiKey": "<My Key>",
+    "jwtPublicKey": "<My base64 key>",
+    "logLevelConsole": 0,
+    "logLevelPersist": 0
+  }
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -19,11 +37,15 @@ spec:
         image: linkedmink/road-wave-fm-web
         ports:
         - containerPort: 80
-        env:
-        - name: USER_SERVICE_URL
-          value: "https://[Your Host]"
-        - name: JWT_PUBLIC_KEY_FILE
-          value: "[File Name]"
+        volumeMounts:
+        - name: config-volume
+          mountPath: /usr/share/nginx/html/config.json
+          subPath: config.json
+          readonly: true
+  volumes:
+    - name: config-volume
+      configMap:
+        name: road-wave-fm-web
 
 ---
 apiVersion: v1
