--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@googlemaps/js-api-loader": "^1.12.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "clsx": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
