--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "react-scripts": "4.0.3",
     "prettier": "^2.3.2",
-    "typescript": "^4.1.2"
+    "typescript": "~4.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
