--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "road-wave-fm-web",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A web application to communicate with the Road Wave FM data source",
   "license": "MIT",
   "author": {
@@ -20,13 +20,13 @@
     "@reduxjs/toolkit": "^1.6.1",
     "clsx": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "query-string": "^7.0.1",
     "url-join": "^4.0.1",
     "web-vitals": "^1.0.1"
   },
@@ -35,22 +35,22 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/express": "^4.17.13",
     "@types/google.maps": "^3.45.6",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.2",
-    "@types/node": "^14.17.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
-    "@types/query-string": "^6.3.0",
     "@types/url-join": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "react-scripts": "4.0.3",
     "prettier": "^2.3.2",
-    "typescript": "~4.1.6"
+    "react-scripts": "4.0.3",
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -73,5 +73,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "packageManager": "yarn@3.0.2"
 }
