--- a/package.json
+++ b/package.json
@@ -13,43 +13,56 @@
   },
   "private": true,
   "dependencies": {
-    "@googlemaps/js-api-loader": "^1.12.1",
+    "@googlemaps/js-api-loader": "^1.12.6",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@reduxjs/toolkit": "^1.6.1",
+    "@reduxjs/toolkit": "^1.6.2",
     "clsx": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.1.0",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
+    "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "url-join": "^4.0.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.1.2",
+    "workbox-background-sync": "^5.1.4",
+    "workbox-broadcast-update": "^5.1.4",
+    "workbox-cacheable-response": "^5.1.4",
+    "workbox-core": "^5.1.4",
+    "workbox-expiration": "^5.1.4",
+    "workbox-google-analytics": "^5.1.4",
+    "workbox-navigation-preload": "^5.1.4",
+    "workbox-precaching": "^5.1.4",
+    "workbox-range-requests": "^5.1.4",
+    "workbox-routing": "^5.1.4",
+    "workbox-strategies": "^5.1.4",
+    "workbox-streams": "^5.1.4"
   },
   "devDependencies": {
-    "@testing-library/dom": "^8.1.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/dom": "^8.9.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@tsconfig/create-react-app": "^1.0.2",
     "@types/google.maps": "^3.45.6",
-    "@types/jest": "^26.0.15",
-    "@types/jsonwebtoken": "^8.5.2",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/url-join": "^4.0.0",
+    "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.19",
+    "@types/react-router-dom": "^5.3.1",
+    "@types/url-join": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.3.2",
-    "react-scripts": "4.0.3",
+    "eslint-plugin-prettier": "^3.4.1",
+    "prettier": "^2.4.1",
+    "react-scripts": "~4.0.3",
     "typescript": "^4.4.4"
   },
   "scripts": {
@@ -58,21 +71,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint -c .eslintrc.js src/**/*.[tj]s{,x}",
-    "format": "prettier --write src/**/*.[tj]s{,x} *.js{,on}",
-    "build:serve": "tsc --project ./tsconfig.serve.json",
-    "start:serve": "node ./dist/server.js"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "format": "prettier --write src/**/*.[tj]s{,x} *.js{,on}"
   },
   "packageManager": "yarn@3.0.2"
 }
