--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,10 @@
 
 # production
 /build
-/dist
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -29,5 +29,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-*.key*
