--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@tsconfig/create-react-app": "^1.0.2",
+    "@tsconfig/node16": "^1.0.2",
     "@types/google.maps": "^3.45.6",
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.5",
@@ -58,16 +59,20 @@
     "@types/url-join": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "chalk": "^4.1.2",
+    "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
     "prettier": "^2.4.1",
     "react-scripts": "~4.0.3",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && rm build/config*.json",
+    "build": "react-scripts build && yarn postbuild",
+    "postbuild": "ts-node-dev --project deploy/tsconfig.json -r dotenv/config deploy/PostBuild.ts",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint -c .eslintrc.js src/**/*.[tj]s{,x}",
