ci: Fix AWS env var name

--- a/deploy/aws.amplify.env
+++ b/deploy/aws.amplify.env
@@ -1,6 +1,6 @@
 # Set these environment variables when deploying with AWS Amplify
 ## Build Config
-AWS_AMPLIFY=true
+DEPLOY_TO_AWS_AMPLIFY=true
 CI=true
 GENERATE_SOURCEMAP=true
 
