--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.4",
     "prettier": "^2.4.1",
     "react-scripts": "~4.0.3",
     "ts-node-dev": "^1.1.8",
@@ -73,6 +75,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build && yarn postbuild",
     "postbuild": "ts-node-dev --project deploy/tsconfig.json -r dotenv/config deploy/PostBuild.ts",
+    "postinstall": "husky install",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint -c .eslintrc.js src/**/*.[tj]s{,x}",
