--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "road-wave-fm-web",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A web application to communicate with the Road Wave FM data source",
   "license": "MIT",
   "author": {
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@googlemaps/js-api-loader": "^1.12.7",
+    "@googlemaps/js-api-loader": "^1.12.11",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -26,7 +26,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.0",
+    "redux-thunk": "^2.4.1",
     "url-join": "^4.0.1",
     "web-vitals": "^1.1.2",
     "workbox-background-sync": "^5.1.4",
@@ -43,17 +43,17 @@
     "workbox-streams": "^5.1.4"
   },
   "devDependencies": {
-    "@testing-library/dom": "^8.10.1",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/dom": "^8.11.1",
+    "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@tsconfig/create-react-app": "^1.0.2",
     "@tsconfig/node16": "^1.0.2",
-    "@types/google.maps": "^3.46.0",
+    "@types/google.maps": "^3.47.0",
     "@types/jest": "^26.0.24",
-    "@types/jsonwebtoken": "^8.5.5",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
     "@types/url-join": "^4.0.1",
@@ -64,12 +64,13 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.27.1",
     "husky": "^7.0.4",
-    "lint-staged": "^11.2.6",
-    "prettier": "^2.4.1",
+    "lint-staged": "^12.1.2",
+    "prettier": "^2.5.1",
     "react-scripts": "~4.0.3",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4"
+    "typescript": "~4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
