--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -2,14 +2,12 @@ name: Develop
 on:
   push:
     branches:
-      - main
       - feature/*
       - hotfix/*
   pull_request:
     branches:
       - main
-      - feature/*
-      - hotfix/*
+      - develop
 jobs:
   verify:
     runs-on: ubuntu-20.04
