--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^1.6.2",
     "clsx": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
+    "marked": "^4.0.7",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -52,6 +53,7 @@
     "@types/google.maps": "^3.47.0",
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.6",
+    "@types/marked": "^4.0.1",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
