--- a/.github/workflows/publish_tag.yml
+++ b/.github/workflows/publish_tag.yml
@@ -17,7 +17,7 @@ jobs:
     needs: [build]
     uses: LinkedMink/road-wave-fm-web/.github/workflows/publish.yml@main
     with:
-      uploadToTag: ${{ github.ref }}
+      uploadToTag: ${GITHUB_REF#refs/*/}
       appBundleName: app-bundle
     secrets:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
