fix: lock packages on build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,32 +7,39 @@ on:
         required: false
         default: false
         description: 'Upload distribution files to Github'
-      appBundleName:
-        type: string
-        required: false
-        default: app-bundle
-        description: 'Name associated with actions/upload-artifact'
+    outputs:
+      uploadedBuildName:
+        description: "If a build is uploaded, this name will be output"
+        value: ${{ jobs.build.outputs.output1 }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      uploadedBuildName: ${{ steps.package.outputs.uploadedBuildName }}
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
-        node-version: '14'
+        node-version: '16'
         cache: 'yarn'
     - name: Install
-      run: yarn install
+      run: yarn install --immutable --ignore-optional
     - name: Lint
       run: yarn lint
     - name: Test
       run: yarn test || true
     - name: Build
       run: yarn build
-    - name: Upload Packages
-      if: ${{ inputs.uploadBuild }}
+    - name: Package Artifacts
+      id: package
+      if: inputs.uploadBuild
+      run: |
+        echo "PACKAGE_FILE=$(npm pack | tail -1)" >> $GITHUB_ENV
+        echo "::set-output name=uploadedBuildName::${{ env.PACKAGE_FILE }}"
+    - name: Upload Artifacts
+      if: inputs.uploadBuild
       uses: actions/upload-artifact@v2
       with:
-        name: ${{ inputs.appBundleName }}
-        path: build
+        name: ${{ env.PACKAGE_FILE }}
+        path: ${{ env.PACKAGE_FILE }}
