--- a/.github/workflows/publish_tag.yml
+++ b/.github/workflows/publish_tag.yml
@@ -9,15 +9,15 @@ on:
 
 jobs:
   build:
+    if: github.event.base_ref == 'refs/heads/main'
     uses: LinkedMink/road-wave-fm-web/.github/workflows/build.yml@main
     with:
       uploadBuild: true
-      appBundleName: app-bundle
   publish:
+    if: github.event.base_ref == 'refs/heads/main'
     needs: [build]
     uses: LinkedMink/road-wave-fm-web/.github/workflows/publish.yml@main
     with:
-      uploadToTag: ${GITHUB_REF#refs/*/}
-      appBundleName: app-bundle
+      uploadToTag: ${{ github.ref_name }}
     secrets:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
