--- a/package.json
+++ b/package.json
@@ -61,27 +61,31 @@
     "@types/url-join": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "browserslist": "^4.18.1",
     "chalk": "^4.1.2",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.27.1",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.1.2",
     "prettier": "^2.5.1",
     "react-scripts": "~4.0.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "~4.4.4"
   },
+  "optionalDependencies": {
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && yarn postbuild",
     "postbuild": "ts-node-dev --project deploy/tsconfig.json -r dotenv/config deploy/PostBuild.ts",
-    "postinstall": "husky install",
+    "postinstall": "husky install || cd .",
     "test": "react-scripts test",
+    "test:ci": "react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject",
-    "lint": "eslint -c .eslintrc.js src/**/*.[tj]s{,x}",
+    "lint": "eslint src/**/*.[tj]s{,x}",
     "format": "prettier --write src/**/*.[tj]s{,x} *.js{,on}"
   },
   "packageManager": "yarn@3.0.2"
