--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         node-version: '16'
         cache: 'yarn'
     - name: Install
-      run: yarn install --immutable --ignore-optional
+      run: yarn install --immutable
     - name: Lint
       run: yarn lint
     - name: Test
