--- a/.github/workflows/publish_tag.yml
+++ b/.github/workflows/publish_tag.yml
@@ -9,15 +9,16 @@ on:
 
 jobs:
   build:
-    if: github.event.base_ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
     uses: LinkedMink/road-wave-fm-web/.github/workflows/build.yml@main
     with:
       uploadBuild: true
   publish:
-    if: github.event.base_ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
     needs: [build]
     uses: LinkedMink/road-wave-fm-web/.github/workflows/publish.yml@main
     with:
       uploadToTag: ${{ github.ref_name }}
+      uploadedBuildName: ${{ needs.build.outputs.uploadedBuildName }} 
     secrets:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
