--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ${{steps.download.outputs.download-path}}
+        file: ${{steps.download.outputs.download-path}}/*
         tag: ${{ inputs.uploadToTag }}
         overwrite: true
         file_glob: true
