fix: publish files

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,11 +23,12 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: ${{ inputs.uploadedBuildName }}
+        path: ''
     - name: Associate with Github Release Assets
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ${{steps.download.outputs.download-path}}/*
+        file: ${{ inputs.uploadedBuildName }}
         tag: ${{ inputs.uploadToTag }}
         overwrite: true
         file_glob: true
