--- a/.github/workflows/publish_dispatch.yml
+++ b/.github/workflows/publish_dispatch.yml
@@ -16,7 +16,7 @@ jobs:
     with:
       uploadBuild: true
   publish:
-    needs: [build]
+    needs: build
     uses: LinkedMink/road-wave-fm-web/.github/workflows/publish.yml@main
     with:
       uploadToTag: ${{ github.event.inputs.uploadToTag }}
