fix: publish output env syntax

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,12 +33,11 @@ jobs:
       run: yarn build
     - id: package-artifacts
       name: Package Artifacts
-      
       if: inputs.uploadBuild
       run: |
         echo '::echo::on'
         echo "PACKAGE_FILE=$(npm pack | tail -1)" >> $GITHUB_ENV
-        echo "::set-output name=uploadedBuildName::${{ env.PACKAGE_FILE }}"
+        echo "::set-output name=uploadedBuildName::$PACKAGE_FILE"
     - name: Upload Artifacts
       if: inputs.uploadBuild
       uses: actions/upload-artifact@v2
