--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@linkedmink/road-wave-fm-web",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A web application to communicate with the Road Wave FM data source",
   "license": "MIT",
   "author": {
     "name": "Harlan Sang",
-    "email": "harlan@linkedmink.space"
+    "email": "harlan.sang@linkedmink.net"
   },
   "repository": {
     "type": "git",
@@ -19,67 +19,67 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@reduxjs/toolkit": "^1.6.2",
     "clsx": "^1.1.1",
-    "jsonwebtoken": "^8.5.1",
+    "jose": "^4.8.1",
     "marked": "^4.0.7",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^5.3.0",
+    "react-redux": "^8.0.1",
+    "react-router-dom": "^5.3.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "url-join": "^4.0.1",
-    "web-vitals": "^1.1.2",
-    "workbox-background-sync": "^5.1.4",
-    "workbox-broadcast-update": "^5.1.4",
-    "workbox-cacheable-response": "^5.1.4",
-    "workbox-core": "^5.1.4",
-    "workbox-expiration": "^5.1.4",
-    "workbox-google-analytics": "^5.1.4",
-    "workbox-navigation-preload": "^5.1.4",
-    "workbox-precaching": "^5.1.4",
-    "workbox-range-requests": "^5.1.4",
-    "workbox-routing": "^5.1.4",
-    "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "url-join": "^5.0.0",
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^6.5.3",
+    "workbox-broadcast-update": "^6.5.3",
+    "workbox-cacheable-response": "^6.5.3",
+    "workbox-core": "^6.5.3",
+    "workbox-expiration": "^6.5.3",
+    "workbox-google-analytics": "^6.5.3",
+    "workbox-navigation-preload": "^6.5.3",
+    "workbox-precaching": "^6.5.3",
+    "workbox-range-requests": "^6.5.3",
+    "workbox-routing": "^6.5.3",
+    "workbox-strategies": "^6.5.3",
+    "workbox-streams": "^6.5.3"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.16.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^14.2.0",
     "@tsconfig/create-react-app": "^1.0.2",
     "@tsconfig/node16": "^1.0.2",
     "@types/google.maps": "^3.47.0",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.5.1",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/marked": "^4.0.1",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
     "@types/url-join": "^4.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
     "browserslist": "^4.18.1",
-    "chalk": "^4.1.2",
-    "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
+    "chalk": "^5.0.1",
+    "dotenv": "^16.0.1",
+    "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "prettier": "^2.5.1",
-    "react-scripts": "~4.0.3",
+    "react-scripts": "~5.0.1",
     "ts-node-dev": "^1.1.8",
-    "typescript": "~4.4.4"
+    "typescript": "^4.6.4"
   },
   "optionalDependencies": {
-    "husky": "^7.0.4",
+    "husky": "^8.0.1",
     "lint-staged": "^12.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && yarn postbuild",
+    "build": "react-scripts build",
     "postbuild": "ts-node-dev --project deploy/tsconfig.json -r dotenv/config deploy/PostBuild.ts",
     "postinstall": "husky install || cd .",
     "test": "react-scripts test",
@@ -87,6 +87,5 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.[tj]s{,x}",
     "format": "prettier --write src/**/*.[tj]s{,x} *.js{,on}"
-  },
-  "packageManager": "yarn@3.0.2"
+  }
 }
