--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-router-dom": "^5.3.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "url-join": "^5.0.0",
+    "url-join": "^4.0.1",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.3",
     "workbox-broadcast-update": "^6.5.3",
@@ -54,6 +54,7 @@
     "@types/jest": "^27.5.1",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/marked": "^4.0.1",
+    "@types/node": "^16.11.36",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
     "@types/react-redux": "^7.1.20",
@@ -62,7 +63,7 @@
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "browserslist": "^4.18.1",
-    "chalk": "^5.0.1",
+    "chalk": "^4.1.2",
     "dotenv": "^16.0.1",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.3.0",
@@ -82,8 +83,8 @@
     "build": "react-scripts build",
     "postbuild": "ts-node-dev --project deploy/tsconfig.json -r dotenv/config deploy/PostBuild.ts",
     "postinstall": "husky install || cd .",
-    "test": "react-scripts test",
-    "test:ci": "react-scripts test --coverage --watchAll=false",
+    "test": "react-scripts test --watchAll",
+    "test:ci": "react-scripts test --coverage --silent",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.[tj]s{,x}",
     "format": "prettier --write src/**/*.[tj]s{,x} *.js{,on}"
