ci: Update publish action and patch cleanup

--- a/.github/workflows/publish_dispatch.yml
+++ b/.github/workflows/publish_dispatch.yml
@@ -22,4 +22,4 @@ jobs:
       uploadToTag: ${{ github.event.inputs.uploadToTag }}
       uploadedBuildName: ${{ needs.build.outputs.uploadedBuildName }} 
     secrets:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
