--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ on:
         required: true
         description: 'Name associated with actions/upload-artifact'
     secrets:
-      GITHUB_TOKEN:
+      REPO_TOKEN:
         required: true
 
 jobs:
@@ -31,7 +31,7 @@ jobs:
     - name: Associate with Github Release Assets
       uses: svenstaro/upload-release-action@v2
       with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        repo_token: ${{ secrets.REPO_TOKEN }}
         file: archive/*
         tag: ${{ inputs.uploadToTag }}
         overwrite: true
