--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Lint
       run: npm run lint
     - name: Test
-      run: npm run test:ci || true
+      run: npm run test:ci
     - name: Build
       run: npm run build
     - name: Package Artifacts
