--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ frontend:
         - npm ci
     build:
       commands:
-        - npm run build
+        - if [ "${AWS_BRANCH}" = "main" ]; then npm run build; else npm run build -- --profile; fi
   artifacts:
     baseDirectory: /build/
     files:
