--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   },
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@fontsource/roboto": "^4.5.7",
     "@googlemaps/js-api-loader": "^1.12.11",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.0",
     "@reduxjs/toolkit": "^1.6.2",
-    "clsx": "^1.1.1",
     "jose": "^4.8.1",
     "marked": "^4.0.7",
     "query-string": "^7.0.1",
