Add Google OAuth support

--- a/deploy/aws.amplify.env
+++ b/deploy/aws.amplify.env
@@ -5,8 +5,12 @@ CI=true
 GENERATE_SOURCEMAP=true
 
 ## App Config
-URL_USER_API=user.api.mydomain.local
-URL_ROAD_WAVE_API=rwfm.api.mydomain.local
+URL_USER_API=https://user.api.mydomain.local
+URL_ROAD_WAVE_API=https://rwfm.api.mydomain.local
 USER_API_JWT_PUBLIC_KEY=<My base64 key>
 GOOGLE_MAPS_API_KEY=<My Key>
+GOOGLE_OAUTH_CLIENT_ID=<My ID>
 LOG_LEVEL=0
+
+REACT_APP_ENABLE_WEB_VITALS=true
+REACT_APP_DISABLE_SERVICE_WORKER=true
