--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^8.0.1",
-    "react-router-dom": "^5.3.3",
+    "react-redux": "^7.2.8",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4",
@@ -57,8 +58,6 @@
     "@types/node": "^16.11.36",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
-    "@types/react-redux": "^7.1.20",
-    "@types/react-router-dom": "^5.3.2",
     "@types/url-join": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
