--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@linkedmink/road-wave-fm-web",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A web application to communicate with the Road Wave FM data source",
   "license": "MIT",
   "author": {
@@ -9,19 +9,30 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/LinkedMink/road-wave-fm-web"
+    "url": "https://github.com/LinkedMink/road-wave-fm-web.git"
   },
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "postbuild": "ts-node-dev --project deploy/tsconfig.json -r dotenv/config deploy/PostBuild.ts",
+    "postinstall": "husky install || cd .",
+    "test": "react-scripts test --watchAll",
+    "test:ci": "react-scripts test --coverage --silent --ci",
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.{t,j}s{,x}",
+    "format": "prettier --write src/**/*.{t,j}s{,x} *.{m,c,}js{,on}"
+  },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@fontsource/roboto": "^4.5.7",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@fontsource/roboto": "^4.5.8",
     "@googlemaps/js-api-loader": "^1.12.11",
-    "@mui/icons-material": "^5.8.0",
-    "@mui/material": "^5.8.0",
-    "@reduxjs/toolkit": "^1.6.2",
-    "jose": "^4.8.1",
-    "marked": "^4.0.7",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.1",
+    "@reduxjs/toolkit": "^1.8.5",
+    "jose": "^4.9.0",
+    "marked": "^4.0.19",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -31,61 +42,48 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4",
-    "workbox-background-sync": "^6.5.3",
-    "workbox-broadcast-update": "^6.5.3",
-    "workbox-cacheable-response": "^6.5.3",
-    "workbox-core": "^6.5.3",
-    "workbox-expiration": "^6.5.3",
-    "workbox-google-analytics": "^6.5.3",
-    "workbox-navigation-preload": "^6.5.3",
-    "workbox-precaching": "^6.5.3",
-    "workbox-range-requests": "^6.5.3",
-    "workbox-routing": "^6.5.3",
-    "workbox-strategies": "^6.5.3",
-    "workbox-streams": "^6.5.3"
+    "workbox-background-sync": "^6.5.4",
+    "workbox-broadcast-update": "^6.5.4",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-google-analytics": "^6.5.4",
+    "workbox-navigation-preload": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-range-requests": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-streams": "^6.5.4"
   },
   "devDependencies": {
-    "@testing-library/dom": "^8.11.1",
-    "@testing-library/jest-dom": "^5.16.0",
+    "@testing-library/dom": "^8.17.1",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
-    "@testing-library/user-event": "^14.2.0",
+    "@testing-library/user-event": "^14.4.3",
     "@tsconfig/create-react-app": "^1.0.2",
-    "@tsconfig/node16": "^1.0.2",
-    "@types/google.maps": "^3.49.0",
-    "@types/jest": "^27.5.1",
+    "@tsconfig/node16": "^1.0.3",
+    "@types/google.maps": "^3.49.2",
+    "@types/jest": "^27.5.2",
     "@types/jsonwebtoken": "^8.5.6",
-    "@types/marked": "^4.0.1",
-    "@types/node": "^16.11.36",
-    "@types/react": "^17.0.45",
+    "@types/marked": "^4.0.5",
+    "@types/node": "^16.11.51",
+    "@types/react": "^17.0.48",
     "@types/react-dom": "^17.0.17",
     "@types/url-join": "^4.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
-    "browserslist": "^4.18.1",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "browserslist": "^4.21.3",
     "chalk": "^4.1.2",
     "dotenv": "^16.0.1",
-    "eslint": "^8.16.0",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
-    "prettier": "^2.5.1",
-    "react-scripts": "~5.0.1",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.4"
-  },
-  "optionalDependencies": {
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
     "husky": "^8.0.1",
-    "lint-staged": "^12.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "postbuild": "ts-node-dev --project deploy/tsconfig.json -r dotenv/config deploy/PostBuild.ts",
-    "postinstall": "husky install || cd .",
-    "test": "react-scripts test --watchAll",
-    "test:ci": "react-scripts test --coverage --silent",
-    "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.[tj]s{,x}",
-    "format": "prettier --write src/**/*.[tj]s{,x} *.js{,on}"
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "react-scripts": "~5.0.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
   }
 }
