--- a/.github/workflows/build-ref.yml
+++ b/.github/workflows/build-ref.yml
@@ -1,12 +1,13 @@
 name: Build ref
-concurrency: 
+concurrency:
   group: build-${{ github.ref }}
   cancel-in-progress: true
 on:
-  workflow_dispatch:
-  pull_request:
-    branches:
-    - main
+  push:
+    branches-ignore:
+      - main
+  pull_request: {}
+  workflow_dispatch: {}
 
 jobs:
   build:
