--- a/deploy/container/Dockerfile
+++ b/deploy/container/Dockerfile
@@ -4,11 +4,12 @@ ARG ENVIRONMENT=development
 
 ENV IS_CONTAINER_ENV true
 
-COPY deploy/nginx.conf /etc/nginx/conf.d/default.conf
+COPY deploy/container/nginx.conf /etc/nginx/conf.d/default.conf
 
 WORKDIR /usr/share/nginx/html
 
 COPY build/ .
+
 RUN ls -la .
 
 EXPOSE 80
