--- a/deploy/tsconfig.json
+++ b/deploy/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@tsconfig/node16/tsconfig.json",
+  "compilerOptions": {
+    "module": "Node16",
+    "moduleResolution": "NodeNext"
+  },
   "include": ["./"]
 }
