--- a/package.json
+++ b/package.json
@@ -15,33 +15,33 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "ts-node-dev --project deploy/tsconfig.json -r dotenv/config deploy/PostBuild.ts",
+    "postbuild": "ts-node --esm --project deploy/tsconfig.json --require dotenv/config deploy/PostBuild.mts",
     "postinstall": "husky install || cd .",
     "test": "react-scripts test --watchAll",
     "test:ci": "react-scripts test --coverage --silent --ci",
     "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.{t,j}s{,x}",
-    "format": "prettier --write src/**/*.{t,j}s{,x} *.{m,c,}js{,on}"
+    "lint": "eslint src/**/*.ts{,x} deploy/**/*.{,m,c}ts *.{,m,c}js",
+    "format": "prettier --write src/**/*.ts{,x} deploy/**/*.{,m,c}ts *.{m,c,}js{,on}"
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fontsource/roboto": "^4.5.8",
     "@googlemaps/js-api-loader": "^1.12.11",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.10.1",
+    "@mui/icons-material": "^5.10.2",
+    "@mui/material": "^5.10.2",
     "@reduxjs/toolkit": "^1.8.5",
     "jose": "^4.9.0",
     "marked": "^4.0.19",
     "query-string": "^7.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.4",
+    "web-vitals": "^3.0.0",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
     "workbox-cacheable-response": "^6.5.4",
@@ -58,32 +58,32 @@
   "devDependencies": {
     "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.5",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
     "@tsconfig/create-react-app": "^1.0.2",
     "@tsconfig/node16": "^1.0.3",
-    "@types/google.maps": "^3.49.2",
+    "@types/google.maps": "^3.50.0",
     "@types/jest": "^27.5.2",
-    "@types/jsonwebtoken": "^8.5.6",
-    "@types/marked": "^4.0.5",
-    "@types/node": "^16.11.51",
-    "@types/react": "^17.0.48",
-    "@types/react-dom": "^17.0.17",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/marked": "^4.0.6",
+    "@types/node": "^16.11.56",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@types/url-join": "^4.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
     "browserslist": "^4.21.3",
-    "chalk": "^4.1.2",
+    "chalk": "^5.0.1",
     "dotenv": "^16.0.1",
-    "eslint": "^8.22.0",
+    "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react": "^7.31.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "react-scripts": "~5.0.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
+    "ts-node": "^10.9.1",
+    "typescript": "~4.7.4"
   }
 }
